--- a/AWG client.ipynb
+++ b/AWG client.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "going!\n",
-      "Connecting to hello world server…\n",
-      "Sending request 0 …\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#\n",
     "#   AWG client in Python\n",
@@ -47,7 +37,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting to hello world server…\n"
+     ]
+    }
+   ],
+   "source": [
+    "# single request tester\n",
+    "import zmq\n",
+    "\n",
+    "context = zmq.Context()\n",
+    "\n",
+    "#  Socket to talk to server\n",
+    "print(\"Connecting to hello world server…\")\n",
+    "socket = context.socket(zmq.REQ)\n",
+    "socket.connect(\"tcp://localhost:5555\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +74,6 @@
     }
    ],
    "source": [
-    "# single request tester\n",
-    "\n",
     "socket.send(b'START')\n",
     "message = socket.recv()\n",
     "print(f\"Received reply [ {message} ]\")"
@@ -68,21 +81,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Received reply [ b'Stopping the server' ]\n"
+      "Received reply [ b'Killing the server' ]\n"
      ]
     }
    ],
    "source": [
-    "# single request tester\n",
-    "\n",
-    "socket.send(b'STOP_SERVER')\n",
+    "socket.send(b'KILL_SERVER')\n",
+    "message = socket.recv()\n",
+    "print(f\"Received reply [ {message} ]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'numpy.ndarray'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-b2baf0372505>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mdata_array\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m101\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34mb'UPLOAD_DATA'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdata_array\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Received reply [ {message} ]\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'numpy.ndarray'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "data_array=np.linspace(0,10,101)\n",
+    "socket.send(b'UPLOAD_DATA',data_array)\n",
     "message = socket.recv()\n",
     "print(f\"Received reply [ {message} ]\")"
    ]
@@ -111,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
